# ED22-02-Araya-Bordones

./: CMakeLists.txt  README.md
Video/: recording.conf
docs/: BITACORA.md  README.md
docs/images/: Error
src/: main.cpp
src/logic/: Detector.cpp  KDTree.cpp  LinkedList.cpp  NodePerson.cpp  Person.cpp
src/logic/includes/: Detector.h  KDTree.h  LinkedList.h  NodePerson.h  Person.h
